Fixes #58 by adding Rollup Settings hierarchy custom setting for granular user, profile, and org-wide rollup control - plus it will make installing/upgrading a whole lot easier

--- a/extra-tests/classes/RollupIntegrationTests.cls
+++ b/extra-tests/classes/RollupIntegrationTests.cls
@@ -19,6 +19,7 @@ private class RollupIntegrationTests {
       AccountId = acc.Id
     );
     insert opp;
+    upsert new RollupSettings__c(IsEnabled__c = true);
   }
 
   @isTest
@@ -115,11 +116,26 @@ private class RollupIntegrationTests {
 
     String baseId = Application__c.SObjectType.getDescribe().getKeyPrefix() + '0'.repeat(11);
     List<Application__c> applications = new List<Application__c>{
-      new Application__c(Id = baseId + 1, Something_With_Underscores__c = 'We have and in the name', ParentApplication__c = parentApp.Id, Engagement_Score__c = 40),
-      new Application__c(Id = baseId + 2, Something_With_Underscores__c = 'We have and in the name', ParentApplication__c = parentApp.Id, Engagement_Score__c = 40),
+      new Application__c(
+        Id = baseId + 1,
+        Something_With_Underscores__c = 'We have and in the name',
+        ParentApplication__c = parentApp.Id,
+        Engagement_Score__c = 40
+      ),
+      new Application__c(
+        Id = baseId + 2,
+        Something_With_Underscores__c = 'We have and in the name',
+        ParentApplication__c = parentApp.Id,
+        Engagement_Score__c = 40
+      ),
       new Application__c(Id = baseId + 3, Something_With_Underscores__c = 'Financial Services', ParentApplication__c = parentApp.Id, Engagement_Score__c = 30),
       new Application__c(Id = baseId + 4, Something_With_Underscores__c = 'Backslashes/Too', ParentApplication__c = parentApp.Id, Engagement_Score__c = 5),
-      new Application__c(Id = baseId + 5, Something_With_Underscores__c = 'Something & Something Else', ParentApplication__c = parentApp.Id, Engagement_Score__c = 10)
+      new Application__c(
+        Id = baseId + 5,
+        Something_With_Underscores__c = 'Something & Something Else',
+        ParentApplication__c = parentApp.Id,
+        Engagement_Score__c = 10
+      )
     };
     Rollup.records = applications;
 
@@ -135,13 +151,11 @@ private class RollupIntegrationTests {
     input.calcItemWhereClause = 'Something_With_Underscores__c != \'' + applications[0].Something_With_Underscores__c + '\'';
 
     Test.startTest();
-    Rollup.performRollup(new List<Rollup.FlowInput>{
-      input
-    });
+    Rollup.performRollup(new List<Rollup.FlowInput>{ input });
     Test.stopTest();
 
     ParentApplication__c updatedParent = [SELECT Engagement_Rollup__c FROM ParentApplication__c];
-    System.assertEquals(45/3, updatedParent.Engagement_Rollup__c, 'Average should be calculated based off of matching items');
+    System.assertEquals(45 / 3, updatedParent.Engagement_Rollup__c, 'Average should be calculated based off of matching items');
   }
 
   @isTest
@@ -149,7 +163,7 @@ private class RollupIntegrationTests {
     ParentApplication__c parentApp = new ParentApplication__c(Name = 'Custom Object Parent App');
     insert parentApp;
 
-    List<Application__c> apps =  new List<Application__c>{
+    List<Application__c> apps = new List<Application__c>{
       new Application__c(Something_With_Underscores__c = 'We have and in the name', ParentApplication__c = parentApp.Id, Engagement_Score__c = 40),
       new Application__c(Something_With_Underscores__c = 'We have and in the name', ParentApplication__c = parentApp.Id, Engagement_Score__c = 40),
       new Application__c(Something_With_Underscores__c = 'Financial Services', ParentApplication__c = parentApp.Id, Engagement_Score__c = 30),
@@ -171,9 +185,7 @@ private class RollupIntegrationTests {
     input.calcItemTypeWhenRollupStartedFromParent = 'Application__c';
 
     Test.startTest();
-    Rollup.performRollup(new List<Rollup.FlowInput>{
-      input
-    });
+    Rollup.performRollup(new List<Rollup.FlowInput>{ input });
     Test.stopTest();
 
     ParentApplication__c updatedParent = [SELECT Engagement_Rollup__c FROM ParentApplication__c];
