Fixing README thanks to Alexandre de Lavalette, finished committing negative tests for RollupEvaluator

--- a/rollup/tests/RollupEvaluatorTests.cls
+++ b/rollup/tests/RollupEvaluatorTests.cls
@@ -404,6 +404,11 @@ private class RollupEvaluatorTests {
     assertExceptionContains('Amount > (1, 2, 3, 4)', 'Comparison not valid with multiple arguments', new Opportunity(Amount = 1));
   }
 
+  @isTest
+  static void shouldThrowExceptionForMultipleValuesWithLessThan() {
+    assertExceptionContains('Amount < (1, 2, 3, 4)', 'Comparison not valid with multiple arguments', new Opportunity(Amount = 1));
+  }
+
   private static void assertExceptionContains(String whereClause, String expectedException, Opportunity opp) {
     Exception ex;
 
